# codeinsight-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/codeinsight/: __init__.py  agent.py  agent_tools.py  api.py  cli.py  engine.py  eval.py  fix_tool.py  git_tool.py  graph.py  llm.py  memory.py  schemas.py  session.py
src/codeinsight/static/: index.html
src/codeinsight/tools/: __init__.py  chunk_tool.py  deps_tool.py  diagnose_tool.py  language_parser.py  path_guard.py  read_tool.py  search_tool.py  symbol_index.py  symbol_tool.py  tree_tool.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_api.py  test_cli_ask.py  test_deps_engine.py  test_deps_tool.py  test_diagnose_engine.py  test_diagnose_tool.py  test_engine_smoke.py  test_eval.py  test_fix.py  test_graph.py  test_llm.py  test_memory.py  test_path_guard.py  test_pr_review.py  test_read_engine.py  test_read_tool.py  test_review.py  test_search_tool.py  test_symbol_tool.py
