[project]
name = "codeinsight-agent"
version = "0.1.0"
description = "只读代码库分析 Agent（uv 优先的 CLI 工作流）"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langfuse>=2.0",
    "tree-sitter>=0.23",
]

[project.scripts]
# 暴露稳定的 CLI 入口，便于执行 `uv run codeinsight ...`。
codeinsight = "codeinsight.cli:main"

[dependency-groups]
# 将测试工具放在 dev 组，保持运行时依赖最小化。
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0",
]
grammars = [
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
]

[tool.pytest.ini_options]
# 使用简洁的 pytest 输出，便于早期迭代时快速查看结果。
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/codeinsight"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
# 将当前项目按可打包项目处理，确保安装 project.scripts 入口命令。
package = true
