[project]
name = "codeinsight-agent"
version = "0.1.0"
description = "基于 LangGraph 多 Agent 协作的只读代码库分析工具"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Xudong Liu" },
]
keywords = [
    "code-analysis",
    "langchain",
    "langgraph",
    "multi-agent",
    "cli",
    "tree-sitter",
    "llm",
    "code-review",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langfuse>=2.0",
    "python-multipart>=0.0.12",
    "tree-sitter>=0.23",
]

[project.urls]
Homepage = "https://github.com/Xudong-Liu-kkk/codeinsight-agent"
Repository = "https://github.com/Xudong-Liu-kkk/codeinsight-agent"

[project.scripts]
# 暴露稳定的 CLI 入口，便于执行 `uv run codeinsight ...`。
codeinsight = "codeinsight.cli:main"

[dependency-groups]
# 将测试工具放在 dev 组，保持运行时依赖最小化。
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0",
]
grammars = [
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
]

[tool.pytest.ini_options]
# 使用简洁的 pytest 输出，便于早期迭代时快速查看结果。
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/codeinsight"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
# 将当前项目按可打包项目处理，确保安装 project.scripts 入口命令。
package = true

[tool.setuptools.package-data]
codeinsight = ["static/*.html"]
